# snake-rs

./: .gitignore  Cargo.toml  README.md
snake-lib/: Cargo.toml
snake-lib/src/: cell.rs  field.rs  lib.rs  point.rs
snake-tui/: Cargo.toml
snake-tui/src/: curses_window.rs  main.rs  snake_window.rs
src/: cell.rs  field.rs  lib.rs  point.rs  snake_window.rs
