[package]
name = "snake-lib"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]
description = "Core library for a classic snake game"
edition = "2018"

[lib]
name = "snake"

[features]
default = ["pancurses"]

[dependencies]
num = "0.1.36"
pancurses = { version = "0.7", optional = true }
rand = "0.3"
